[package]
name = "data"
version = "0.0.0"
authors = ["Rain Liu <yliu@webrtc.rs>"]
edition = "2021"
description = "DataChannel in Rust"
license = "MIT/Apache-2.0"

[dependencies]
shared = { path = "../shared", package = "shared", default-features = false, features = ["marshal"] }
sctp = { path = "../sctp", package = "sctp" }

tokio = { version = "1.19", features = ["full"] }
bytes = "1"
log = "0.4.16"
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4.0" # must match the min version of the `tokio` crate above
env_logger = "0.9.0"
chrono = "0.4.23"
