[package]
name = "data"
version = "0.0.0"
authors = ["Rain Liu <yliu@webrtc.rs>"]
edition = "2021"
description = "DataChannel in Rust"
license = "MIT/Apache-2.0"

[dependencies]
shared = { path = "../rtc-shared", package = "rtc-shared", default-features = false, features = ["marshal"] }
sctp = { path = "../sctp", package = "sctp" }

bytes = "1"
log = "0.4.16"
thiserror = "1.0"

[dev-dependencies]
env_logger = "0.11"
chrono = "0.4.23"
