[package]
name = "dtls"
version = "0.0.0"
authors = ["Rain Liu <yliu@webrtc.rs>"]
edition = "2021"
description = "DTLS in Rust"
license = "MIT/Apache-2.0"

[dependencies]
shared = { path = "../shared", package = "shared", default-features = false, features = ["crypto", "replay"] }
retty = "0.24.0"
bytes = "1.4.0"
byteorder = "1"
rand_core = "0.6.3"
hkdf = "~0.12.1"
p256 = { version = "0.11.1", features = ["default", "ecdh", "ecdsa"] }
p384 = "0.11.2"
rand = "0.8.5"
hmac = "0.12.1"
sec1 = { version = "0.3.0", features = [ "std" ] }
sha1 = "0.10.5"
sha2 = "0.10.6"
aes = "0.6.0"
block-modes = "0.7.0"
aes-gcm = "0.10.1"
ccm = "0.3.0"
x25519-dalek = { version = "2.0.0-rc.2", features = ["static_secrets"] }
x509-parser = "0.13.2"
der-parser = "8.1"
rcgen = "0.10.0"
ring = "0.16.19"
webpki = "0.21.4"
rustls = { version = "0.19.0", features = ["dangerous_configuration"]}
bincode = "1.3"
serde = { version = "1.0.110", features = ["derive"] }
subtle = "2.4"
log = "0.4.16"
thiserror = "1.0"
pem = { version = "1", optional = true }
fxhash = "0.2.1"

[dev-dependencies]
local-sync = "0.1.0"
core_affinity = "0.8.0"
chrono = "0.4.23"
env_logger = "0.10.0"
clap = { version = "4.2.2", features = ["derive"] }
anyhow = "1.0.70"
ctrlc = "3.2.5"
futures = "0.3.28"

[features]
pem = ["dep:pem"]

[[example]]
name = "dtls_chat_server"
path = "examples/dtls_chat_server.rs"

[[example]]
name = "dtls_echo_server"
path = "examples/dtls_echo_server.rs"

[[example]]
name = "dtls_client"
path = "examples/dtls_client.rs"

#[[example]]
#name = "dial_psk"
#path = "examples/dial/psk/dial_psk.rs"
#bench = false
#
#[[example]]
#name = "dial_selfsign"
#path = "examples/dial/selfsign/dial_selfsign.rs"
#bench = false
#
#[[example]]
#name = "dial_verify"
#path = "examples/dial/verify/dial_verify.rs"
#bench = false
#
#[[example]]
#name = "listen_psk"
#path = "examples/listen/psk/listen_psk.rs"
#bench = false
#
#[[example]]
#name = "listen_selfsign"
#path = "examples/listen/selfsign/listen_selfsign.rs"
#bench = false
#
#[[example]]
#name = "listen_verify"
#path = "examples/listen/verify/listen_verify.rs"
#bench = false
