[package]
name = "rtc-examples"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Examples of WebRTC.rs stack with SansIO RTC API"
license.workspace = true
documentation = "https://docs.rs/rtc-examples"
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]

[dev-dependencies]
rtc.workspace = true
signal.workspace = true

tokio = { version = "1.48.0", features = ["full"] }
env_logger = "0.11.8"
clap = { version = "4.5.53", features = ["derive"] }
hyper = { version = "0.14.32", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["codec"] }
anyhow = "1.0.100"
chrono = "0.4.42"
log = "0.4.29"
serde_json = "1.0.145"
bytes = "1.11.0"
rand = "0.9.2"
ctrlc = "3.5.1"

[[example]]
name = "data-channels"
path = "examples/data-channels/data-channels.rs"
bench = false

[[example]]
name = "data-channels-create"
path = "examples/data-channels-create/data-channels-create.rs"
bench = false

[[example]]
name = "data-channels-close"
path = "examples/data-channels-close/data-channels-close.rs"
bench = false

[[example]]
name = "data-channels-flow-control"
path = "examples/data-channels-flow-control/data-channels-flow-control.rs"
bench = false

[[example]]
name = "data-channels-offer"
path = "examples/data-channels-offer-answer/data-channels-offer.rs"
bench = false

[[example]]
name = "data-channels-answer"
path = "examples/data-channels-offer-answer/data-channels-answer.rs"
bench = false

[[example]]
name = "insertable-streams"
path = "examples/insertable-streams/insertable-streams.rs"
bench = false

[[example]]
name = "play-from-disk-vpx"
path = "examples/play-from-disk-vpx/play-from-disk-vpx.rs"
bench = false

[[example]]
name = "play-from-disk-h26x"
path = "examples/play-from-disk-h26x/play-from-disk-h26x.rs"
bench = false

[[example]]
name = "save-to-disk-vpx"
path = "examples/save-to-disk-vpx/save-to-disk-vpx.rs"
bench = false

[[example]]
name = "save-to-disk-h26x"
path = "examples/save-to-disk-h26x/save-to-disk-h26x.rs"
bench = false

[[example]]
name = "play-from-disk-renegotiation"
path = "examples/play-from-disk-renegotiation/play-from-disk-renegotiation.rs"
bench = false

[[example]]
name = "reflect"
path = "examples/reflect/reflect.rs"
bench = false

[[example]]
name = "rtp-forwarder"
path = "examples/rtp-forwarder/rtp-forwarder.rs"
bench = false

[[example]]
name = "rtp-to-webrtc"
path = "examples/rtp-to-webrtc/rtp-to-webrtc.rs"
bench = false

[[example]]
name = "simulcast"
path = "examples/simulcast/simulcast.rs"
bench = false

[[example]]
name = "swap-tracks"
path = "examples/swap-tracks/swap-tracks.rs"
bench = false

#[[example]]
#name = "ortc"
#path = "examples/ortc/ortc.rs"
#bench = false
#
#[[example]]
#name = "offer"
#path = "examples/offer-answer/offer.rs"
#bench = false
#
#[[example]]
#name = "answer"
#path = "examples/offer-answer/answer.rs"
#bench = false
#
[[example]]
name = "ice-restart"
path = "examples/ice-restart/ice-restart.rs"
bench = false

[[example]]
name = "broadcast"
path = "examples/broadcast/broadcast.rs"
bench = false

#[[example]]
#name = "rc-cycle"
#path = "examples/rc-cycle/rc-cycle.rs"
#bench = false