[package]
name = "ice"
version = "0.0.0"
authors = ["Rain Liu <yliu@webrtc.rs>"]
edition = "2021"
description = "ICE in Rust"
license = "MIT/Apache-2.0"

[dependencies]
util = { version = "0.7.0", package = "webrtc-util", default-features = false, features = ["conn", "vnet", "sync"] }
stun = { version = "0.4.3"}
turn = { version = "0.6.1"}

arc-swap = "1.5"
async-trait = "0.1.56"
crc = "3.0"
log = "0.4.16"
rand = "0.8.5"
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.19", features = ["full"] }
url = "2.2"
uuid = { version = "1.1", features = ["v4"] }
waitgroup = "0.1.2"

[dev-dependencies]
tokio-test = "0.4.0" # must match the min version of the `tokio` crate above
regex = "1"
env_logger = "0.9.0"
chrono = "0.4.23"
ipnet = "2.5.0"
clap = "3.2.6"
lazy_static = "1.4.0"
hyper = { version = "0.14.19", features = ["full"] }
sha1 = "0.10.5"

#[[example]]
#name = "ping_pong"
#path = "examples/ping_pong.rs"
#bench = false
