[package]
name = "ice"
version = "0.0.0"
authors = ["Rain Liu <yliu@webrtc.rs>"]
edition = "2021"
description = "ICE in Rust"
license = "MIT/Apache-2.0"

[dependencies]
shared = { path = "../shared", package = "shared", default-features = false, features = [] }
stun = { path = "../stun", package = "stun" }

crc = "3.0"
log = "0.4.16"
rand = "0.8.5"
serde = { version = "1.0.102", features = ["derive"] }
url = "2.2"

[dev-dependencies]
regex = "1"
env_logger = "0.9.0"
chrono = "0.4.23"
ipnet = "2.5.0"
clap = "3.2.6"
lazy_static = "1.4.0"
hyper = { version = "0.14.19", features = ["full"] }
sha1 = "0.10.5"
waitgroup = "0.1.2"
serde_json = "1.0"

#[[example]]
#name = "ping_pong"
#path = "examples/ping_pong.rs"
#bench = false
