[package]
name = "ortc"
version = "0.0.0"
authors = ["Rusty Rain <y@ngr.tc>"]
edition = "2021"
description = "OpenRTC or ObjectRTC?"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/ortc"
repository = "https://github.com/webrtc-rs/ortc"
homepage = "https://ortc.rs"
keywords = ["networking", "protocols", "webrtc", "sans-io", "rtc"]
categories = ["network-programming", "asynchronous", "multimedia"]

[dependencies]
