[package]
name = "rtc-datachannel"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "RTC DataChannel in Rust"
license.workspace = true
documentation = "https://docs.rs/rtc-datachannel"
homepage.workspace = true
repository.workspace = true

[dependencies]
shared = { version = "0.3.0", path = "../rtc-shared", package = "rtc-shared", default-features = false, features = ["marshal"] }
sctp = { version = "0.3.0", path = "../rtc-sctp", package = "rtc-sctp" }

bytes = "1.5.0"
log = "0.4.21"
sansio = "1.0.1"

[dev-dependencies]
env_logger = "0.11.3"
chrono = "0.4.35"
