[package]
name = "rtc-datachannel"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "RTC DataChannel in Rust"
license.workspace = true
documentation = "https://docs.rs/rtc-datachannel"
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
shared = { workspace = true, default-features = false, features = ["marshal"] }
sansio.workspace = true
sctp.workspace = true

bytes = "1.5.0"
log = "0.4.21"

[dev-dependencies]
env_logger = "0.11.3"
chrono = "0.4.35"
