[package]
name = "rtc-dtls"
version = "0.1.0"
authors = ["Rain Liu <yliu@webrtc.rs>"]
edition = "2021"
description = "RTC DTLS in Rust"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/rtc-dtls"
homepage = "https://webrtc.rs"
repository = "https://github.com/webrtc-rs/rtc"

[dependencies]
shared = { version = "0.1", path = "../rtc-shared", package = "rtc-shared", default-features = false, features = ["crypto", "replay"] }
retty = "0.24"
bytes = "1.4"
byteorder = "1"
rand_core = "0.6"
hkdf = "0.12"
p256 = { version = "0.13", features = ["default", "ecdh", "ecdsa"] }
p384 = "0.13"
rand = "0.8"
hmac = "0.12"
sec1 = { version = "0.7", features = ["std"] }
sha1 = "0.10"
sha2 = "0.10"
aes = "0.8"
cbc = { version = "0.1", features = ["block-padding", "alloc"] }
aes-gcm = "0.10"
ccm = "0.5"
x25519-dalek = { version = "2", features = ["static_secrets"] }
x509-parser = "0.16"
der-parser = "9"
rcgen = "0.12"
ring = "0.17"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
bincode = "1"
serde = { version = "1", features = ["derive"] }
subtle = "2"
log = "0.4"
thiserror = "1"
pem = { version = "3", optional = true }

[dev-dependencies]
local-sync = "0.1"
core_affinity = "0.8"
chrono = "0.4.34"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
ctrlc = "3"
futures = "0.3"

[features]
pem = ["dep:pem"]

#[[example]]
#name = "dtls_chat_server"
#path = "examples/dtls_chat_server.rs"

#[[example]]
#name = "dtls_echo_server"
#path = "examples/dtls_echo_server.rs"

#[[example]]
#name = "dtls_client"
#path = "examples/dtls_client.rs"

#[[example]]
#name = "dtls_client_selfsign"
#path = "examples/dtls_client_selfsign.rs"

#[[example]]
#name = "dial_psk"
#path = "examples/dial/psk/dial_psk.rs"
#bench = false
#
#[[example]]
#name = "dial_selfsign"
#path = "examples/dial/selfsign/dial_selfsign.rs"
#bench = false
#
#[[example]]
#name = "dial_verify"
#path = "examples/dial/verify/dial_verify.rs"
#bench = false
#
#[[example]]
#name = "listen_psk"
#path = "examples/listen/psk/listen_psk.rs"
#bench = false
#
#[[example]]
#name = "listen_selfsign"
#path = "examples/listen/selfsign/listen_selfsign.rs"
#bench = false
#
#[[example]]
#name = "listen_verify"
#path = "examples/listen/verify/listen_verify.rs"
#bench = false
